<resources>
    <string name="app_name">PPG</string>
    <string name="app_full_name">Private Password Generator</string>
    <string name="action_settings">Settings</string>

    <!-- Main Activity -->
    <string name="main_oops">Oops!</string>
    <!-- -->

    <!-- Settings Activity -->
    <string name="settings_app_password">Application Password</string>
    <string name="settings_old_password">Old Password:</string>
    <string name="settings_new_password">New Password:</string>
    <string name="settings_confirm_password">Confirm Password:</string>
    <string name="settings_ppg">Password Generator Settings</string>
    <string name="settings_master_key">Master Secret Key:</string>
    <string name="settings_secret_length">Secret Length:</string>
    <string name="settings_save">Save Settings</string>
    <string name="settings_password">Login Password</string>
    <string name="settings_class_password_match">Passwords did not match.</string>
    <string name="settings_class_saved_successfully">Saved successfully</string>
    <!-- -->
</resources>
